plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"

    id 'maven-publish'

    id "me.modmuss50.mod-publish-plugin" version "0.3.5"
    // https://modmuss50.github.io/mod-publish-plugin/
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    flatDir {
        dirs 'deps'
    }
}

version = rootProject.mod_version

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name = 'JitPack'
        url = 'https://jitpack.io'
    }

    // cloth config
    maven { url "https://maven.shedaniel.me/" }
    maven { url "https://maven.terraformersmc.com/releases/" }

    // for sodium
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }

    // for parchment
    maven {
        url = "https://maven.parchmentmc.org"
    }

    // for cardinal components that gravity changer uses
    maven {
        name = 'Ladysnake'
        url = 'https://maven.ladysnake.org/releases'
    }

    // geckolib, for testing with portal gun
    maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }


}

loom {
    accessWidenerPath = file("src/main/resources/imm_ptl.accesswidener")
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"

    implementation "net.fabricmc:fabric-loader:${project.loader_version}"

    implementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}") {
        exclude module: "fabric-gametest-api-v1"
        // for now, the gametest module makes client unable to login dev env server
    }

    api("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }
    include "me.shedaniel.cloth:cloth-config-fabric:${cloth_config_version}"

    compileOnly "maven.modrinth:modmenu:${modmenu_version}"
    runtimeOnly "maven.modrinth:modmenu:${modmenu_version}"

    if (!project.vanilla_core_compile.equals('true')) {
        compileOnly "${project.sodium_path}"
        compileOnly "${project.iris_path}"
    }

    compileOnly("com.github.qouteall:GravityChanger:${gravity_changer_version}") {
        exclude(group: "net.fabricmc.fabric-api")
        transitive(false)
    }

    if (project.vanilla_core_compile.equals('true')) {
        compileOnly("com.github.iPortalTeam:DimLib:${dimlib_version}") {
            exclude(group: "net.fabricmc.fabric-api")
        }
    }
    else {
        api("com.github.iPortalTeam:DimLib:${dimlib_version}") {
            exclude(group: "net.fabricmc.fabric-api")
        }
        include("com.github.iPortalTeam:DimLib:${dimlib_version}")
    }

    // put these into inner mod to reduce duplicate MC jar

    if (!project.vanilla_core_compile.equals('true') && project.enable_sodium.equals('true')) {
        runtimeOnly "${project.sodium_path}"
    }

    if (!project.vanilla_core_compile.equals('true') && project.enable_iris.equals('true')) {
        runtimeOnly "${project.iris_path}"
        implementation "org.anarres:jcpp:1.4.14" // for iris
        implementation 'io.github.douira:glsl-transformer:2.0.0-pre13' // for iris
        implementation 'org.antlr:antlr4-runtime:4.11.1' // for iris
    }

    if (project.enable_gravity_changer.equals('true')) {
        runtimeOnly("com.github.qouteall:GravityChanger:${gravity_changer_version}") {
            exclude(group: "net.fabricmc.fabric-api")
        }
    }

    if (project.enable_geckolib.equals('true')) {
        // for testing portal gun using dev jar
        runtimeOnly('software.bernie.geckolib:geckolib-fabric-1.20:4.2') {
            transitive(false)
        }
    }

    if (project.enable_test_mod.equals('true')) {
        fileTree(dir: 'deps', include: '*.jar').each {
            String baseName = it.name.replace(".jar", "")
            String version = "0.1.0"
            int split = baseName.lastIndexOf('-')

            if (split != -1) {
                version = baseName.substring(split + 1)
                baseName = baseName.substring(0, split)
            }

            String name = "testmod:${baseName}:${version}"

            System.out.println("Found test mod: " + it.name.replace(".jar", "") + " -> " + name)

            implementation name
        }
    }
    testImplementation(platform('org.junit:junit-bom:5.10.0'))
    testImplementation('org.junit.jupiter:junit-jupiter')
}

if (project.vanilla_core_compile.equals('true')) {
    sourceSets.main.java {
        exclude 'qouteall/imm_ptl/core/compat/mixin/iris/**'
        exclude 'qouteall/imm_ptl/core/compat/mixin/sodium/**'
        exclude 'qouteall/imm_ptl/core/compat/iris_compatibility/ExperimentalIrisPortalRenderer.java'
        exclude 'qouteall/imm_ptl/core/compat/iris_compatibility/IEIrisNewWorldRenderingPipeline.java'
        exclude 'qouteall/imm_ptl/core/compat/iris_compatibility/IEIrisShadowRenderTargets.java'
        exclude 'qouteall/imm_ptl/core/compat/iris_compatibility/IPIrisHelper.java'
        exclude 'qouteall/imm_ptl/core/compat/iris_compatibility/IrisCompatibilityPortalRenderer.java'
        exclude 'qouteall/imm_ptl/core/compat/iris_compatibility/IrisPortalRenderer.java'
        exclude 'qouteall/imm_ptl/core/compat/iris_compatibility/ShadowMapSwapper.java'
        exclude 'qouteall/imm_ptl/core/compat/sodium_compatibility/IESodiumRenderSectionManager.java'
        exclude 'qouteall/imm_ptl/core/compat/sodium_compatibility/SodiumRenderingContext.java'
        exclude 'qouteall/imm_ptl/core/mixin/client/render/MixinShaderInstanceForIris.java'
        exclude 'qouteall/imm_ptl/core/mixin/client/render/MixinLevelRenderer_BeforeIris.java'
        exclude 'qouteall/imm_ptl/core/mixin/client/render/MixinRenderSystem_Clipping.java'
        exclude 'qouteall/imm_ptl/core/mixin/client/render/shader/MixinGameRenderer_Shaders.java'
        exclude 'qouteall/imm_ptl/core/mixin/client/render/shader/MixinProgram.java'
        exclude 'qouteall/imm_ptl/core/mixin/client/render/shader/MixinShaderInstance.java'
    }
}

processResources {
    inputs.property "version", project.version
    inputs.property "vanilla_core_compile", project.vanilla_core_compile

    filesMatching("fabric.mod.json") {
        expand "version": project.version
        if (project.vanilla_core_compile.equals('true')) {
            filter { line ->
                if (line.contains('"imm_ptl_compat.mixins.json",')) return null
                if (line.contains('"dimlib":')) return null
                if (line.contains('"minecraft":')) return line.replace(',', '')
                return line
            }
        }
    }

    filesMatching("imm_ptl.mixins.json") {
        if (project.vanilla_core_compile.equals('true')) {
            filter { line ->
                if (line.contains('"client.render.MixinLevelRenderer_BeforeIris",')) return null
                if (line.contains('"client.render.MixinLevelRenderer_Optional",')) return null
                if (line.contains('"client.render.MixinLevelRenderer_ForceMainThreadRebuild",')) return null
                if (line.contains('"client.render.optimization.MixinLevelRenderer_Clouds",')) return null
                if (line.contains('"client.render.optimization.MixinSectionBufferBuilderPack",')) return null
                if (line.contains('"client.render.optimization.MixinFrustum",')) return null
                if (line.contains('"client.render.isometric.MixinGameRenderer_Isometric",')) return null
                if (line.contains('"client.render.MixinShaderInstanceForIris",')) return null
                if (line.contains('"client.render.MixinRenderSystem_Clipping",')) return null
                if (line.contains('"client.render.MixinRenderSystem_Fog",')) return null
                if (line.contains('"client.render.MixinGlStateManager",')) return null
                if (line.contains('"client.render.MixinMultiBufferSourceBufferSource",')) return null
                if (line.contains('"client.render.MixinScreenEffectRenderer",')) return null
                if (line.contains('"client.render.shader.MixinGameRenderer_Shaders",')) return null
                if (line.contains('"client.render.shader.MixinProgram",')) return null
                if (line.contains('"client.render.shader.MixinShaderInstance",')) return null
                if (line.contains('"client.MixinLivingEntity_C",')) return null
                if (line.contains('"client.MixinAbstractClientPlayer",')) return null
                if (line.contains('"client.MixinGlDebug",')) return null
                if (line.contains('"client.MixinDebugScreenOverlay",')) return null
                if (line.contains('"client.multiworld_awareness.MixinFogRenderer",')) return null
                if (line.contains('"client.multiworld_awareness.MixinBiomeAmbientSoundPlayer",')) return null
                if (line.contains('"common.portal_generation.MixinItemEntity_P",')) return null
                if (line.contains('"common.interaction.MixinServerPlayerGameMode",')) return null
                if (line.contains('"common.chunk_sync.MixinChunkMap_C",')) return line
                if (line.contains('"common.chunk_sync.IEServerCommonPacketListenerImpl",')) return line
                if (line.contains('"common.chunk_sync.')) return null
                if (line.contains('"common.entity_sync.')) return null
                if (line.contains('"common.position_sync.')) return null
                if (line.contains('"common.other_sync.MixinPlayerList",')) return null
                if (line.contains('"client.interaction.MixinMultiPlayerGameMode",')) return null
                if (line.contains('"client.sync.MixinServerBoundMovePlayerPacket",')) return null
                if (line.contains('"client.sync.MixinServerboundMovePlayerPacketPos",')) return null
                if (line.contains('"client.sync.MixinServerBoundMovePlayerPacketPosRot",')) return null
                if (line.contains('"client.sync.MixinServerboundMovePlayerPacketRot",')) return null
                if (line.contains('"client.sync.MixinServerboundMovePlayerPacketStatusOnly"')) return null
                return line
            }
        }
    }

    filesMatching("imm_ptl_peripheral.mixins.json") {
        if (project.vanilla_core_compile.equals('true')) {
            filter { line ->
                if (line.contains(".alternate_dimension.")) return null
                if (line.contains(".dim_stack.")) return null
                if (line.contains('"client.portal_wand.MixinDebugRenderer",')) return null
                if (line.contains('"client.MixinSplashManager_CVB",')) return null
                return line
            }
        }
    }

    filesMatching("imm_ptl_fabric.mixins.json") {
        if (project.vanilla_core_compile.equals('true')) {
            filter { line ->
                if (line.contains('"client.MixinFabricInvalidateRenderStateCallback"')) return null
                if (line.contains('"client.MixinFabricClientPlayNetworkAddon",')) return line.replace(',', '')
                return line
            }
        }
    }

    if (project.vanilla_core_compile.equals('true')) {
        exclude "imm_ptl_compat.mixins.json"
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
    it.options.compilerArgs += ['-Xmaxerrs', '2000']
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}


// change the output file name
jar {
    afterEvaluate {
        archiveFileName = "${project.archives_base_name}-${project.mod_version}-mc${project.minecraft_version}-fabric.jar"
    }
}


jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}"}
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}

// miscellaneous

task printClasspath {
    doLast {
        // NOTE don't forget to exclude the submod dev jar
        configurations.compileClasspath.each { println "\"" + (it.toString().replace("\\", "/")) + "\"," }
    }
}

// Enable ZGC: -XX:+UseZGC

// run test when building will slow down the build process
// manually run when needed
//test {
//    useJUnitPlatform()
//    testLogging {
//        events "passed", "skipped", "failed"
//    }
//}

publishMods {
    file = jar.archiveFile
    changelog = file("changelog.md").text
    type = ALPHA
    modLoaders.add("fabric")

    displayName = "v${project.mod_version}-mc${project.minecraft_version}"
    version = "v${project.mod_version}-mc${project.minecraft_version}"

    curseforge {
        projectId = "332273"
        accessToken = providers.environmentVariable("CURSEFORGE_TOKEN")
        minecraftVersions.add(minecraft_version)

        requires {
            slug = "fabric-api"
        }
    }
    modrinth {
        projectId = "zJpHMkdD"
        accessToken = providers.environmentVariable("MODRINTH_TOKEN")
        minecraftVersions.add(minecraft_version)

        requires {
            slug = "fabric-api"
        }
    }
    github {
        repository = "iPortalTeam/ImmersivePortalsMod"
        accessToken = providers.environmentVariable("GITHUB_TOKEN")
        commitish = "${project.git_branch}"
    }
}
